--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "nanoflann"]
 	path = nanoflann
-	url = git@github.com:modit3d/nanoflann.git
+	url = https://github.com/modit3d/nanoflann.git
